--- a/src/PhotoSyncService/PhotoSyncService.fsproj
+++ b/src/PhotoSyncService/PhotoSyncService.fsproj
@@ -6,10 +6,13 @@
 
   <ItemGroup>
     <Compile Include="Config.fs" />
+    <Compile Include="Layout.fs" />
+    <Compile Include="SettingsPage.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Falco" Version="5.*" />
+    <PackageReference Include="Falco.Htmx" Version="1.2.0" />
   </ItemGroup>
 </Project>
